{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 21,
  "lineage": "4fb4a680-4180-224e-d46d-c7637c98eb49",
  "resources": [
    {
      "module": "module.ec2-fe",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-fe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ebfd941bbafe70c6",
            "arn": "arn:aws:ec2:us-east-1:010526246825:instance/i-05f45a9a172597e48",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f45a9a172597e48",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pingram-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d0e8b7a31fff422c",
            "private_dns": "ip-10-0-1-113.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.113",
            "public_ip": "54.205.19.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0845ae124eea75865",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0230011e3c8a1b42e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a3e4019316a5a8b",
            "tags": {
              "Name": "Pringma-FE"
            },
            "tags_all": {
              "Name": "Pringma-FE"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0230011e3c8a1b42e"
            ]
          },
          "dependencies": [
            "module.ec2-fe.aws_security_group.sg-fe",
            "module.pringram-vpc.aws_subnet.sub1",
            "module.pringram-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-fe",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-fe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526246825:security-group/sg-0230011e3c8a1b42e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0230011e3c8a1b42e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241002044321159900000001",
            "name_prefix": "terraform-",
            "owner_id": "010526246825",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "FE-sg"
            },
            "tags_all": {
              "Name": "FE-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-027fa3daba4963216"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pringram-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pringram-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526246825:internet-gateway/igw-0bc7ac5e05a10fe5c",
            "id": "igw-0bc7ac5e05a10fe5c",
            "owner_id": "010526246825",
            "tags": {
              "Name": "Pingrame-igw"
            },
            "tags_all": {
              "Name": "Pingrame-igw"
            },
            "vpc_id": "vpc-027fa3daba4963216"
          },
          "dependencies": [
            "module.pringram-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pringram-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526246825:route-table/rtb-0a1bd79dcd7968c00",
            "id": "rtb-0a1bd79dcd7968c00",
            "owner_id": "010526246825",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc7ac5e05a10fe5c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub-rt"
            },
            "tags_all": {
              "Name": "pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-027fa3daba4963216"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pringram-vpc.aws_internet_gateway.igw",
            "module.pringram-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pringram-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526246825:route-table/rtb-0cd358e1a07ab118c",
            "id": "rtb-0cd358e1a07ab118c",
            "owner_id": "010526246825",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc7ac5e05a10fe5c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub-rt"
            },
            "tags_all": {
              "Name": "pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-027fa3daba4963216"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pringram-vpc.aws_internet_gateway.igw",
            "module.pringram-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pringram-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubrt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a43ddfa51b019586",
            "route_table_id": "rtb-0cd358e1a07ab118c",
            "subnet_id": "subnet-01cf188cef8ecc691"
          },
          "dependencies": [
            "module.pringram-vpc.aws_internet_gateway.igw",
            "module.pringram-vpc.aws_route_table.pub-rt2",
            "module.pringram-vpc.aws_subnet.sub2",
            "module.pringram-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pringram-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054987b1bd3090bd3",
            "route_table_id": "rtb-0a1bd79dcd7968c00",
            "subnet_id": "subnet-01a3e4019316a5a8b"
          },
          "dependencies": [
            "module.pringram-vpc.aws_internet_gateway.igw",
            "module.pringram-vpc.aws_route_table.pub-rt1",
            "module.pringram-vpc.aws_subnet.sub1",
            "module.pringram-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pringram-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526246825:subnet/subnet-01a3e4019316a5a8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a3e4019316a5a8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010526246825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-027fa3daba4963216"
          },
          "dependencies": [
            "module.pringram-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pringram-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526246825:subnet/subnet-01cf188cef8ecc691",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cf188cef8ecc691",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010526246825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet2"
            },
            "tags_all": {
              "Name": "Subnet2"
            },
            "vpc_id": "vpc-027fa3daba4963216"
          },
          "dependencies": [
            "module.pringram-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pringram-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526246825:vpc/vpc-027fa3daba4963216",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bd99852ebed7f22b",
            "default_route_table_id": "rtb-0d1418227735f5260",
            "default_security_group_id": "sg-065b4e9aa021f0487",
            "dhcp_options_id": "dopt-0d7b16dade5e2ee9b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-027fa3daba4963216",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1418227735f5260",
            "owner_id": "010526246825",
            "tags": {
              "Name": "Pingram-VPC"
            },
            "tags_all": {
              "Name": "Pingram-VPC"
            }
          }
        }
      ]
    }
  ]
}